# yt-sub-manager

./: .gitignore  README.md  render.yaml  requirements.txt
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/youtube/submanager/: MainActivity.kt  YTSubApp.kt
android/app/src/main/java/com/youtube/submanager/data/api/: ApiService.kt  AuthInterceptor.kt  TokenAuthenticator.kt
android/app/src/main/java/com/youtube/submanager/data/model/: Models.kt
android/app/src/main/java/com/youtube/submanager/data/repository/: AuthRepository.kt  TokenStore.kt  (+1 more)
android/app/src/main/java/com/youtube/submanager/di/: AppModule.kt
android/app/src/main/java/com/youtube/submanager/util/: FCMService.kt  TimeUtils.kt  YouTubeIntentHelper.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: auth_utils.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  channels.py  preferences.py  videos.py  websub.py
backend/app/services/: cleanup.py  fcm.py  sync.py  sync_jobs.py  video_filters.py  video_metadata.py  video_retention.py  websub.py  youtube_api.py
backend/app/tasks/: scheduler.py
backend/tests/: test_auth_refresh_token.py  test_video_filters.py  test_video_metadata.py  test_video_retention.py
scripts/: run_dev.sh
(+7 files in other folders)
